Add country pages

--- a/croatia/index.html
+++ b/croatia/index.html
@@ -13,141 +13,196 @@
     </head>
 <body>
 
-    <!-- Wrapper -->
-    <div id="wrapper">
+    <!-- Side Navigation -->
+    <menu id="nav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <li><a href="croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
+        <li><a href="bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
+                Herzegovina</a></li>
+        <li><a href="serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
+        <li><a href="montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
+        <li><a href="macedonia/"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
+    </menu>
 
-        <!-- Side Navigation -->
-        <menu id="nav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <li><a href="croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
-            <li><a href="bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
-                    Herzegovina</a></li>
-            <li><a href="serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
-            <li><a href="montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
-            <li><a href="macedonia/"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
-        </menu>
+    <!-- Background Image -->
+    <div class="background-cover" style="background-image: url('../assets/images/hero-croatia.jpg');">
 
-        <!-- Background Image -->
-        <div class="background-cover" style="background-image: url('../assets/images/hero-balkans.jpg');">
+        <!-- Inner Wrapper -->
+        <div class="inner">
 
-            <!-- Inner Wrapper -->
-            <div class="inner">
+            <!-- Global Site Header -->
+            <header id="banner">
+                <a href="../" id="logo">Visit the Balkans</a>
+                <nav>
+                    <button id="menu" onclick="openNav()">Menu</button>
+                </nav>
+            </header>
 
-                <!-- Global Site Header -->
-                <header id="banner">
-                    <a href="/" id="logo">Visit the Balkans</a>
-                    <nav>
-                        <button id="menu" onclick="openNav()">Menu</button>
-                    </nav>
-                </header>
-
-                <!-- Hero Section -->
-                <section id="hero">
-                    <div>
-                        <h1>Adventure Awaits You</h1>
-                        <p>
-                            Ready to embark on this extraordinary adventure? Download our comprehensive brochure now and
-                            start planning your dream getaway.
-                        </p>
-                        <a class="button button-primary" href="#">Download Brochure</a>
-                    </div>
-                    <figure>
-                        <img src="../assets/images/map-balkans.png" alt="Map of the Balkans">
-                    </figure>
-                </section>
-            </div>
-        </div>
-
-        <!-- Main Section -->
-        <main id="featured">
-
-            <!-- Inner Wrapper -->
-            <div class="inner">
-                <h2>Discover the Balkans</h2>
-
-                <!-- Article Grid -->
-                <div>
-                    <a href="croatia/">
-                        <article>
-                            <img src="../assets/images/hero-croatia.jpg">
-                            <h3>Croatia</h3>
-                            <p>Coastal gem with a Mediterranean charm.</p>
-                        </article>
-                    </a>
-                    <a href="bosnia/">
-                        <article>
-                            <img src="../assets/images/hero-bosnia.jpg">
-                            <h3>Bosnia &amp; Herzegovina</h3>
-                            <p>Timeless tales etched in nature.</p>
-                        </article>
-                    </a>
-                    <a href="serbia/">
-                        <article>
-                            <img src="../assets/images/hero-serbia.jpg">
-                            <h3>Serbia</h3>
-                            <p>A mix of cultures and vibrant urban life.</p>
-                        </article>
-                    </a>
-                    <a href="montenegro/">
-                        <article>
-                            <img src="../assets/images/hero-montenegro.jpg">
-                            <h3>Montenegro</h3>
-                            <p>Nature's masterpiece on the Adriatic.</p>
-                        </article>
-                    </a>
-                    <a href="macedonia/">
-                        <article>
-                            <img src="../assets/images/hero-macedonia.jpg">
-                            <h3>North Macedonia</h3>
-                            <p>A blend of cultures in scenic beauty.</p>
-                        </article>
-                    </a>
-                </div>
-            </div>
-        </main>
-
-        <!-- Background Image -->
-        <div class="background-cover" style="background-image: url('../assets/images/quotes-balkans.jpg');">
-
-            <!-- Inner Wrapper -->
-            <div class="inner">
-
-                <!-- Block Quotation -->
-                <figure class="quote">
-                    <blockquote>
-                        "My journey through the Balkans was a revelation. From the breathtaking Plitvice Lakes in
-                        Croatia to
-                        the
-                        rich history of Novi Sad in Serbia, the region's diverse landscapes and vibrant culture
-                        captivated
-                        me.
-                        What truly sets the Balkans apart is the warmth of its people. I left with cherished memories
-                        and
-                        newfound friends."
-                    </blockquote>
-                    <figcaption>-Gabriel, Sydney</figcaption>
+            <!-- Hero Section -->
+            <section id="hero">
+                <figure>
+                    <img src="../assets/images/map-croatia.png" alt="Map of Croatia">
                 </figure>
+                <div>
+                    <h1>Croatia</h1>
+                    <p>
+                        Croatia is a captivating country known for its stunning Adriatic coastline, historic cities, and diverse natural landscapes. With charming medieval towns, crystal-clear waters, and lush national parks, Croatia offers a perfect blend of culture, history, and natural beauty. 
+                    </p>
+                    <p>
+                        Visitors are drawn to its ancient architecture, vibrant local culture, and the idyllic islands that dot the coastline. Croatia is a destination that seamlessly combines rich heritage with breathtaking scenery, making it a must-visit for travellers seeking both relaxation and exploration.
+                    </p>
+                </div>
+            </section>
+        </div>
+    </div>
 
-                <!-- Call to Action Section -->
-                <section class="cta">
+    <!-- Main Section -->
+    <main>
+        
+        <article class="column">
+            <div class="inner">
+                <h2>Popular Destinations</h2>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
                     <div>
-                        <h2>What are you waiting for?</h2>
+                        <h3>Split</h3>
                         <p>
-                            Discover the wonders of the Balkans, and let your wanderlust lead the way. Your
-                            adventure begins
-                            here. Don't miss out – download our brochure to get started!
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
                         </p>
                     </div>
-                    <a class="button" href="#">
-                        Download Brochure
-                    </a>
+                </section>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
+                    <div>
+                        <h3>Split</h3>
+                        <p>
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                    </div>
+                </section>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
+                    <div>
+                        <h3>Split</h3>
+                        <p>
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
                 </section>
             </div>
-        </div>
+        </article>
 
-        <!-- Footer -->
-        <footer>Copyright &copy; Visit the Balkans 2023</footer>
+        <article class="column alt">
+            <div class="inner">
+                <h2>Popular Destinations</h2>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
+                    <div>
+                        <h3>Split</h3>
+                        <p>
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                    </div>
+                </section>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
+                    <div>
+                        <h3>Split</h3>
+                        <p>
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                    </div>
+                </section>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
+                    <div>
+                        <h3>Split</h3>
+                        <p>
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                    </div>
+                </section>
+            </div>
+        </article>
+
+        <article class="column">
+            <div class="inner">
+                <h2>Popular Destinations</h2>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
+                    <div>
+                        <h3>Split</h3>
+                        <p>
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                    </div>
+                </section>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
+                    <div>
+                        <h3>Split</h3>
+                        <p>
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                    </div>
+                </section>
+                <section class="row">
+                    <img src="../assets/images/hero-croatia.jpg" alt="">
+                    <div>
+                        <h3>Split</h3>
+                        <p>
+                            Split is a historic city on the Adriatic coast, known for its beautiful beaches and ancient Roman ruins. The city is home to Diocletian's Palace, a UNESCO World Heritage Site that was built in the 4th century AD. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                        <p>
+                            Split is a popular destination for travellers seeking a mix of culture and relaxation. The city's historic centre is a UNESCO World Heritage Site, and the surrounding area offers beautiful beaches and natural landscapes. Split is also a popular destination for sailing, with many marinas and yacht clubs located along the coast.
+                        </p>
+                </section>
+            </div>
+        </article>
+    </main>
+    <div class="background-cover" style="background-image: url('../assets/images/hero-croatia.jpg');">
+        <div class="inner">
+            <!-- Call to Action Section -->
+            <section class="cta">
+                <div>
+                    <h2>What are you waiting for?</h2>
+                    <p>
+                        Discover the wonders of the Balkans, and let your wanderlust lead the way. Your
+                        adventure begins
+                        here. Don't miss out – download our brochure to get started!
+                    </p>
+                </div>
+                <a class="button" href="#">
+                    Download Brochure
+                </a>
+            </section>
+        </div>
     </div>
+    <!-- Footer -->
+    <footer>Copyright &copy; Visit the Balkans 2023</footer>
 </body>
 
 <!-- Sidebar Navigation Script -->
