--- a/index.html
+++ b/index.html
@@ -13,141 +13,137 @@
     </head>
 <body>
 
-    <!-- Wrapper -->
-    <div id="wrapper">
+    <!-- Side Navigation -->
+    <menu id="nav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <li><a href="croatia/"><img src="assets/images/ico-croatia.png">Croatia</a></li>
+        <li><a href="bosnia/"><img src="assets/images/ico-bosnia.png">Bosnia &amp;
+                Herzegovina</a></li>
+        <li><a href="serbia/"><img src="assets/images/ico-serbia.png">Serbia</a></li>
+        <li><a href="montenegro/"><img src="assets/images/ico-montenegro.png">Montenegro</a></li>
+        <li><a href="macedonia/"><img src="assets/images/ico-macedonia.png">North Macedonia</a></li>
+    </menu>
 
-        <!-- Side Navigation -->
-        <menu id="nav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <li><a href="croatia/"><img src="assets/images/ico-croatia.png">Croatia</a></li>
-            <li><a href="bosnia/"><img src="assets/images/ico-bosnia.png">Bosnia &amp;
-                    Herzegovina</a></li>
-            <li><a href="serbia/"><img src="assets/images/ico-serbia.png">Serbia</a></li>
-            <li><a href="montenegro/"><img src="assets/images/ico-montenegro.png">Montenegro</a></li>
-            <li><a href="macedonia/"><img src="assets/images/ico-macedonia.png">North Macedonia</a></li>
-        </menu>
+    <!-- Background Image -->
+    <div class="background-cover" style="background-image: url('assets/images/hero-balkans.jpg');">
 
-        <!-- Background Image -->
-        <div class="background-cover" style="background-image: url('assets/images/hero-balkans.jpg');">
+        <!-- Inner Wrapper -->
+        <div class="inner">
 
-            <!-- Inner Wrapper -->
-            <div class="inner">
+            <!-- Global Site Header -->
+            <header id="banner">
+                <a href="/" id="logo">Visit the Balkans</a>
+                <nav>
+                    <button id="menu" onclick="openNav()">Menu</button>
+                </nav>
+            </header>
 
-                <!-- Global Site Header -->
-                <header id="banner">
-                    <a href="/" id="logo">Visit the Balkans</a>
-                    <nav>
-                        <button id="menu" onclick="openNav()">Menu</button>
-                    </nav>
-                </header>
-
-                <!-- Hero Section -->
-                <section id="hero">
-                    <div>
-                        <h1>Adventure Awaits You</h1>
-                        <p>
-                            Ready to embark on this extraordinary adventure? Download our comprehensive brochure now and
-                            start planning your dream getaway.
-                        </p>
-                        <a class="button button-primary" href="#">Download Brochure</a>
-                    </div>
-                    <figure>
-                        <img src="assets/images/map-balkans.png" alt="Map of the Balkans">
-                    </figure>
-                </section>
-            </div>
-        </div>
-
-        <!-- Main Section -->
-        <main id="featured">
-
-            <!-- Inner Wrapper -->
-            <div class="inner">
-                <h2>Discover the Balkans</h2>
-
-                <!-- Article Grid -->
+            <!-- Hero Section -->
+            <section id="hero" class="home">
                 <div>
-                    <a href="croatia/">
-                        <article>
-                            <img src="assets/images/hero-croatia.jpg">
-                            <h3>Croatia</h3>
-                            <p>Coastal gem with a Mediterranean charm.</p>
-                        </article>
-                    </a>
-                    <a href="bosnia/">
-                        <article>
-                            <img src="assets/images/hero-bosnia.jpg">
-                            <h3>Bosnia &amp; Herzegovina</h3>
-                            <p>Timeless tales etched in nature.</p>
-                        </article>
-                    </a>
-                    <a href="serbia/">
-                        <article>
-                            <img src="assets/images/hero-serbia.jpg">
-                            <h3>Serbia</h3>
-                            <p>A mix of cultures and vibrant urban life.</p>
-                        </article>
-                    </a>
-                    <a href="montenegro/">
-                        <article>
-                            <img src="assets/images/hero-montenegro.jpg">
-                            <h3>Montenegro</h3>
-                            <p>Nature's masterpiece on the Adriatic.</p>
-                        </article>
-                    </a>
-                    <a href="macedonia/">
-                        <article>
-                            <img src="assets/images/hero-macedonia.jpg">
-                            <h3>North Macedonia</h3>
-                            <p>A blend of cultures in scenic beauty.</p>
-                        </article>
-                    </a>
+                    <h1>Adventure Awaits You</h1>
+                    <p>
+                        Ready to embark on this extraordinary adventure? Download our comprehensive brochure now and
+                        start planning your dream getaway.
+                    </p>
+                    <a class="button button-primary" href="#">Download Brochure</a>
                 </div>
-            </div>
-        </main>
-
-        <!-- Background Image -->
-        <div class="background-cover" style="background-image: url('assets/images/quotes-balkans.jpg');">
-
-            <!-- Inner Wrapper -->
-            <div class="inner">
-
-                <!-- Block Quotation -->
-                <figure class="quote">
-                    <blockquote>
-                        "My journey through the Balkans was a revelation. From the breathtaking Plitvice Lakes in
-                        Croatia to
-                        the
-                        rich history of Novi Sad in Serbia, the region's diverse landscapes and vibrant culture
-                        captivated
-                        me.
-                        What truly sets the Balkans apart is the warmth of its people. I left with cherished memories
-                        and
-                        newfound friends."
-                    </blockquote>
-                    <figcaption>-Gabriel, Sydney</figcaption>
+                <figure>
+                    <img src="assets/images/map-balkans.png" alt="Map of the Balkans">
                 </figure>
+            </section>
+        </div>
+    </div>
 
-                <!-- Call to Action Section -->
-                <section class="cta">
-                    <div>
-                        <h2>What are you waiting for?</h2>
-                        <p>
-                            Discover the wonders of the Balkans, and let your wanderlust lead the way. Your
-                            adventure begins
-                            here. Don't miss out – download our brochure to get started!
-                        </p>
-                    </div>
-                    <a class="button" href="#">
-                        Download Brochure
-                    </a>
-                </section>
+    <!-- Main Section -->
+    <main id="featured">
+        <h2>Discover the Balkans</h2>
+        
+        <!-- Inner Wrapper -->
+        <div class="inner">
+
+            <!-- Article Grid -->
+            <div class="row">
+                <a href="croatia/">
+                    <article>
+                        <img src="assets/images/hero-croatia.jpg">
+                        <h3>Croatia</h3>
+                        <p>Coastal gem with a Mediterranean charm.</p>
+                    </article>
+                </a>
+                <a href="bosnia/">
+                    <article>
+                        <img src="assets/images/hero-bosnia.jpg">
+                        <h3>Bosnia &amp; Herzegovina</h3>
+                        <p>Timeless tales etched in nature.</p>
+                    </article>
+                </a>
+                <a href="serbia/">
+                    <article>
+                        <img src="assets/images/hero-serbia.jpg">
+                        <h3>Serbia</h3>
+                        <p>A mix of cultures and vibrant urban life.</p>
+                    </article>
+                </a>
+                <a href="montenegro/">
+                    <article>
+                        <img src="assets/images/hero-montenegro.jpg">
+                        <h3>Montenegro</h3>
+                        <p>Nature's masterpiece on the Adriatic.</p>
+                    </article>
+                </a>
+                <a href="macedonia/">
+                    <article>
+                        <img src="assets/images/hero-macedonia.jpg">
+                        <h3>North Macedonia</h3>
+                        <p>A blend of cultures in scenic beauty.</p>
+                    </article>
+                </a>
             </div>
         </div>
+    </main>
 
-        <!-- Footer -->
-        <footer>Copyright &copy; Visit the Balkans 2023</footer>
+    <!-- Background Image -->
+    <div class="background-cover" style="background-image: url('assets/images/quotes-balkans.jpg');">
+
+        <!-- Inner Wrapper -->
+        <div class="inner">
+
+            <!-- Block Quotation -->
+            <figure class="quote">
+                <blockquote>
+                    "My journey through the Balkans was a revelation. From the breathtaking Plitvice Lakes in
+                    Croatia to
+                    the
+                    rich history of Novi Sad in Serbia, the region's diverse landscapes and vibrant culture
+                    captivated
+                    me.
+                    What truly sets the Balkans apart is the warmth of its people. I left with cherished memories
+                    and
+                    newfound friends."
+                </blockquote>
+                <figcaption>-Gabriel, Sydney</figcaption>
+            </figure>
+
+            <!-- Call to Action Section -->
+            <section class="cta">
+                <div>
+                    <h2>What are you waiting for?</h2>
+                    <p>
+                        Discover the wonders of the Balkans, and let your wanderlust lead the way. Your
+                        adventure begins
+                        here. Don't miss out – download our brochure to get started!
+                    </p>
+                </div>
+                <a class="button" href="#">
+                    Download Brochure
+                </a>
+            </section>
+        </div>
     </div>
+
+    <!-- Footer -->
+    <footer>Copyright &copy; Visit the Balkans 2023</footer>
 </body>
 
 <!-- Sidebar Navigation Script -->
